--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -18,6 +18,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Print output
+        run: echo ${{steps.github_release.outputs.changelog}}
+
       - name: Create Release
         uses: actions/create-release@v1
         with:
