--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -30,18 +30,32 @@ jobs:
 
       - name: Build Changelog
         id: github_release
-        uses: mikepenz/release-changelog-builder-action@v1
+        uses: mikepenz/release-changelog-builder-action@{latest-release}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Debug changelog
         run: echo ${{steps.github_release.outputs.changelog}}
+
+      - name: "Complex Configuration"
+        id: build_changelog
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: mikepenz/release-changelog-builder-action@{latest-release}
+        with:
+          configuration: "configuration_complex.json"
+          owner: "Richard-Gist"
+          ignorePreReleases: "false"
+          fromTag: "1.0.0"
+          toTag: "1.3.3"
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Debug changelog
+        run: echo ${{steps.build_changelog.outputs.changelog}}
 
       - name: Create a GitHub release
         uses: actions/create-release@v1
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{steps.github_release.outputs.changelog}}
+          body: ${{steps.build_changelog.outputs.changelog}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
