[more-logging] - hey versions are important

--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Changelog
         id: github_release
-        uses: mikepenz/release-changelog-builder-action@{latest-release}
+        uses: mikepenz/release-changelog-builder-action@v1.7.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Debug changelog
@@ -39,7 +39,7 @@ jobs:
       - name: "Complex Configuration"
         id: build_changelog
         if: startsWith(github.ref, 'refs/tags/')
-        uses: mikepenz/release-changelog-builder-action@{latest-release}
+        uses: mikepenz/release-changelog-builder-action@v1.7.3
         with:
           configuration: "configuration_complex.json"
           owner: "Richard-Gist"
