--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Build Changelog
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v1.7.3
+        with:
+          toTag: ${{ steps.bump_version.outputs.VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Debug changelog
@@ -38,14 +40,13 @@ jobs:
 
       - name: "Complex Configuration"
         id: build_changelog
-        if: startsWith(github.ref, 'refs/tags/')
         uses: mikepenz/release-changelog-builder-action@v1.7.3
         with:
           configuration: "configuration_complex.json"
           owner: "Richard-Gist"
           ignorePreReleases: "false"
           fromTag: "1.0.0"
-          toTag: "1.3.3"
+          toTag: ${{ steps.bump_version.outputs.VERSION }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Debug changelog
         run: echo ${{steps.build_changelog.outputs.changelog}}
