--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -19,7 +19,7 @@ jobs:
         id: bump_version
         run: |
           fastlane minor
-          VERSION=`/usr/libexec/PlistBuddy -c "Print :CFBundleVersion" Sources/CucumberSwift/Info.plist`
+          VERSION=`/usr/libexec/PlistBuddy -c "Print :CFBundleVersion" ActionTesting/Info.plist`
           echo "##[set-output name=version;]$VERSION"
       - name: Commit version changes
         uses: stefanzweifel/git-auto-commit-action@v4
