[main] - This is also only pulling from PRs and not issues... not sure how I feel about that.

--- a/configuration_complex.json
+++ b/configuration_complex.json
@@ -2,23 +2,23 @@
     "categories": [
       {
         "title": "## 🚀 Features",
-        "labels": ["feature"]
+        "labels": ["enhancement"]
       },
       {
         "title": "## 🐛 Fixes",
-        "labels": ["fix"]
+        "labels": ["bug"]
       },
       {
-        "title": "## 🧪 Tests",
-        "labels": ["test"]
+        "title": "## 🧪 Documentation",
+        "labels": ["documentation"]
       }
     ],
     "ignore_labels": [
-      "ignore"
+      "invalid"
     ],
     "sort": "ASC",
     "template": "${{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n${{UNCATEGORIZED}}\n</details>",
-    "pr_template": "- ${{TITLE}}\n   - PR: #${{NUMBER}}",
+    "pr_template": "- #${{NUMBER}} - ${{TITLE}}",
     "empty_template": "- no changes",
     "label_extractor": [
       {
