--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -23,26 +23,11 @@ jobs:
           echo "##[set-output name=version;]$VERSION"
       - name: Commit version changes
         uses: stefanzweifel/git-auto-commit-action@v4
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5.5
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: ''
-          custom_tag: ${{ steps.bump_version.outputs.version }}
-
+      - name: Tag and push
+        run: |
+          git tag "${{ steps.bump_version.outputs.version }}"
+          git push --tags
       - name: Build Changelog
-        id: github_release
-        uses: mikepenz/release-changelog-builder-action@v1.7.3
-        with:
-            fromTag: "1.0.0"
-            toTag: "${{ steps.bump_version.outputs.version }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Debug changelog
-        run: echo "${{steps.github_release.outputs.changelog}}"
-
-      - name: "Complex Configuration"
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v1.7.3
         with:
