--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Create a GitHub release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          tag_name: ${{ steps.bump_version.outputs.version }}
+          release_name: Release ${{ steps.bump_version.outputs.version }}
           body: ${{steps.build_changelog.outputs.changelog}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
