--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -31,7 +31,7 @@ jobs:
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v1.7.3
         with:
-          configuration: "configuration_complex.json"
+          configuration: ".github/configuration_complex.json"
           owner: "Richard-Gist"
           ignorePreReleases: "false"
           toTag: ${{ steps.bump_version.outputs.version }}
