--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           commit_message: "[ci skip] Apply automatic changes"
           tagging_message: "${{ steps.bump_version.outputs.version }}"
+          push_options: --force
       - name: Build Changelog
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v1.7.3
