--- a/.github/workflows/MEGA_CI.yml
+++ b/.github/workflows/MEGA_CI.yml
@@ -50,6 +50,7 @@ jobs:
 
   version_bump:
     runs-on: macos-latest
+    needs: [ test, sonar_scan, build_for_package_managers ]
     if: ${{ github.event.pull_request.merged == 'true' }}
     steps:
       - uses: actions/checkout@v2
