--- a/.github/workflows/PR_Workflow.yml
+++ b/.github/workflows/PR_Workflow.yml
@@ -2,7 +2,9 @@
 # It should be safe and secure to do so.
 
 name: Verify Pull Request
-on: [pull_request]
+on: 
+  pull_request:
+    types: [opened, edited, reopened]
 
 jobs:
   test:
