--- a/.github/workflows/After_Pull_Request.yml
+++ b/.github/workflows/After_Pull_Request.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   workflow_run:
     workflows: [ "Verify Pull Request" ]
-#     branches: [ main ]
+    branches: [ main ]
     types: [ completed ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
