--- a/.github/workflows/After_Pull_Request.yml
+++ b/.github/workflows/After_Pull_Request.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   workflow_run:
     workflows: [ "Verify Pull Request" ]
-    branches: [ main ]
+#     branches: [ main ]
     types: [ completed ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -23,3 +23,14 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
       - run: echo Failure!!!!!!!
+  # This workflow contains a single job called "build"
+  on-forked:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.push.repository.fork == true }}
+    steps:
+      - run: echo This was a fork
+  not-forked:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.push.repository.fork == false }}
+    steps:
+      - run: echo Is this a spoon?
