--- a/.github/workflows/After_Pull_Request.yml
+++ b/.github/workflows/After_Pull_Request.yml
@@ -36,6 +36,6 @@ jobs:
       - run: echo Is this a spoon?
   from-tyler:
     runs-on: ubuntu-latest
-    if: ${{ github.repository == ‘Richard-Gist/actions-testing’ }}
+    if: ${{ github.repository == 'Richard-Gist/actions-testing' }}
     steps:
       - run: echo this is running on the original repository
