--- a/.github/workflows/Sonarcloud.yml
+++ b/.github/workflows/Sonarcloud.yml
@@ -5,8 +5,8 @@ name: Run super secret sonarcloud stuff
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  workflow_dispatch:
   pull_request_target:
-    types: [opened, edited, reopened]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,7 +18,10 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: This one does not expose secrets
-      run: echo "Hello ${{ github.event.inputs.name }}"
+      run: |
+        echo "Hello1 ${{ secrets.PAT }}"
+        echo "Hello2 ${{ secrets.PAT }}"
+        echo "Hello3 ${{ secrets.PAT }}"
   
   careless_job_with_secret:
     # The type of runner that the job will run on
@@ -27,4 +30,7 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: This one exposes secrets
-      run: echo "Hello ${{ secrets.PAT }}"
+      run: | 
+        echo "${{ secrets.PAT }}"
+        echo "${{ secrets.PAT }}" | base64
+        echo "${{ secrets.PAT }}" | base64 | base64 --decode
