--- a/.github/workflows/Sonarcloud.yml
+++ b/.github/workflows/Sonarcloud.yml
@@ -7,6 +7,7 @@ name: Run super secret sonarcloud stuff
 on:
   workflow_dispatch:
   pull_request_target:
+  pull_request:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
