--- a/.github/workflows/Sonarcloud.yml
+++ b/.github/workflows/Sonarcloud.yml
@@ -2,7 +2,7 @@
 
 name: Run super secret sonarcloud stuff
 
-# Controlasdfdsas when the action will run. Workflow runs when manually triggered using the UI
+# Controlasdfdsas when thfdsasdfsasdfe action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
   workflow_dispatch:
