--- a/.github/workflows/Sonarcloud.yml
+++ b/.github/workflows/Sonarcloud.yml
@@ -35,3 +35,36 @@ jobs:
 #         echo "${{ secrets.PAT }}"
 #         echo "${{ secrets.PAT }}" | base64
 #         echo "${{ secrets.PAT }}" | base64 | base64 --decode
+
+  on-success:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - run: | 
+          echo Success!
+          echo ${{ github.event.push.repository.fork }}
+          echo ${{ github.event.push.repository }}
+  on-failure:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    steps:
+      - run: echo Failure!!!!!!!
+  # This workflow contains a single job called "build"
+  on-forked:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.push.repository.fork == true }}
+    steps:
+      - run: |
+          echo This was a fork
+          echo ${{ github.event.push.repository.fork }}
+          echo ${{ github.event.push.repository.fork }}
+  not-forked:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.push.repository.fork == false }}
+    steps:
+      - run: echo Is this a spoon?
+  from-tyler:
+    runs-on: ubuntu-latest
+    if: ${{ github.repository == 'Richard-Gist/actions-testing' }}
+    steps:
+      - run: echo this is running on the original repository
