--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -1,7 +1,8 @@
 name: Version Bump
 
-on:
-  workflow_dispatch:
+on: [ push, workflow_dispatch, pull_request_target ]
+# on:
+#   workflow_dispatch:
 #   workflow_run:
 #     workflows: [ "CI" ]
 #     branches: [ main ]
