--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Bump version in Podspec and Plist
         id: bump_version
         run: |
-          bundle exec fastlane patch
+          fastlane patch
           echo "The version is ${{ steps.bump_version.outputs.version }}"
           echo "##[set-output name=version;]3.0.0"
           echo "The version is ${{ steps.bump_version.outputs.version }}"
