--- a/.github/workflows/DocsWorkflow-kickoff.yml
+++ b/.github/workflows/DocsWorkflow-kickoff.yml
@@ -8,6 +8,7 @@ jobs:
   kickoff:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: mkdir docs
       - uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
