--- a/.github/workflows/DocsWorkflow-kickoff.yml
+++ b/.github/workflows/DocsWorkflow-kickoff.yml
@@ -3,6 +3,8 @@ on:
   workflow_run:
     workflows: [ "Entered Main" ]
     types: [ completed ]
+  workflow_dispatch:
+    
     
 jobs:
   kickoff:
@@ -10,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: mkdir docs
+      - run: echo This is a custom index > docs/index.md
       - uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
           branch: "documentation"
