--- a/.github/workflows/DocsWorkflow-kickoff.yml
+++ b/.github/workflows/DocsWorkflow-kickoff.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           mkdir docs
-          mkdir docs/docs/
-          echo This is a custom index > docs/docs/index.md
+          mkdir docs/
+          echo This is a custom index at root > docs/index.md
       - uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
           branch: gh-pages
