--- a/.github/workflows/DocsWorkflow-kickoff.yml
+++ b/.github/workflows/DocsWorkflow-kickoff.yml
@@ -24,9 +24,9 @@ jobs:
           # If you would like to push the contents of the deployment folder into a specific directory on the deployment branch you can specify it here.
           commit-message: "Deploying docs"
           # If your project generates hashed files on build you can use this option to automatically delete them from the target folder on the deployment branch with each deploy. This option is on by default and can be toggled off by setting it to false.
-          clean: true # optional, default is true
-          # If you need to use clean but you would like to preserve certain files or folders you can use this option. This should contain each pattern as a single line in a multiline string.
-          clean-exclude: "docs/"
+#           clean: true # optional, default is true
+#           # If you need to use clean but you would like to preserve certain files or folders you can use this option. This should contain each pattern as a single line in a multiline string.
+#           clean-exclude: "docs/"
           # This option can be used if you'd prefer to have a single commit on the deployment branch instead of maintaining the full history.
           single-commit: true # optional
     
