--- a/.github/workflows/DocsWorkflow-kickoff.yml
+++ b/.github/workflows/DocsWorkflow-kickoff.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           mkdir docs
+          echo theme: jekyll-theme-merlot > _config.yml
           echo This is a custom index at root > docs/index.md
           mkdir docs/docs
           echo This is nested inside docs to see if this picks up as root > docs/docs/index.md
