--- a/.github/workflows/DocsWorkflow-kickoff.yml
+++ b/.github/workflows/DocsWorkflow-kickoff.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           mkdir docs
-          echo theme: jekyll-theme-merlot > _config.yml
+          echo theme: jekyll-theme-merlot > docs/_config.yml
           echo This is a custom index at root \[README\]\(readme.md\) > docs/index.md
           cat README.md > docs/readme.md
           mkdir docs/docs
