--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,10 +7,14 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-  #     - name: Run TESTS
-  #       run: fastlane unit_test
-  #     - name: Generate SonarCloud Friendly Coverage Report
-  #       run: ./xccov-to-sonarqube-generic.sh ~/Library/Developer/Xcode/DerivedData/*/Logs/Test/*.xcresult > sq-generic.xml
+      - name: Run TESTS
+        run: fastlane unit_test
+      - name: Codecov
+        uses: codecov/codecov-action@v1.5.2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+
   #     - name: Upload Coverage Report
   #       uses: actions/upload-artifact@v2
   #       with:
