--- a/.github/workflows/PR_Workflow.yml
+++ b/.github/workflows/PR_Workflow.yml
@@ -10,4 +10,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: echo Verified!
+      - uses: actions/checkout@v2
+      - name: Run TESTS
+        run: fastlane unit_test
+      - name: Codecov
+        uses: codecov/codecov-action@v1.5.2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
